--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -290,7 +290,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/itbis/" title="Consulta e Emissão de Laudos de ITBI" target="_blank">Emissão de Laudos de ITBI</a></h4>
-                  <p>O serviço de Emissão de Laudos de ITBI permite solicitar e obter laudos técnicos sobre a transferência de imóveis.</p>
+                  <p>O serviço de Emissão de Laudos de ITBI permite solicitar laudos técnicos sobre a transferência de imóveis.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -302,7 +302,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-de-certidao/" title="Emissão de Certidão" target="_blank">Emissão de Certidão</a></h4>
-                  <p>O serviço de Consulta e Emissão de Processos permite acesso a informações detalhadas de processos na prefeitura.</p>
+                  <p>Permite a emissão de certidões negativas ou positivas de débitos e de cadastro imobiliário no Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -326,7 +326,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-protocolo/" title="Consulta e Emissão de Processos" target="_blank">Localização de Processos</a></h4>
-                  <p>O serviço de Consulta e Emissão de Processos permite acesso a informações detalhadas e atualizadas de processos na prefeitura.</p>
+                  <p>O serviço de Consulta e Emissão de Processos permite acesso a informações de processos na prefeitura.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -338,7 +338,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-issqn-fixo/" title="Emissão de ISSQN Fixo" target="_blank">Emissão de ISSQN Fixo</a></h4>
-                  <p>O serviço de Emissão de ISSQN Fixo permite que as pessoas solicitem e imprimam a guia de pagamento do Imposto Sobre Serviços (ISSQN) no regime fixo diretamente pelo Portal do Contribuinte.</p>
+                  <p>O serviço de Emissão de ISSQN Fixo permite que as pessoas solicitem e imprimam a guia de pagamento do imposto pelo Portal.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -374,7 +374,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://www.ac.gov.br/oca/" title="Guia de Serviços Públicos" target="_blank">Guia de Serviços Públicos</a></h4>
-                  <p>Encontre informações sobre os serviços oferecidos pela prefeitura através da OCA (Organização em Centros de Atendimento), incluindo como acessá-los e quais documentos são necessários.</p>
+                  <p>Encontre informações sobre os serviços da prefeitura na OCA (Organização em Centros de Atendimento).</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -409,7 +409,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="http://www2.riobranco.ac.gov.br/validarDocs/validarAlvara.php" title="Verificação de Autenticidade do Alvará de Construção" target="_blank">Autenticidade do Alvará de Construção</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Verifique a autenticidade do Alvará de Construção de forma prática pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -421,7 +421,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="http://www2.riobranco.ac.gov.br/validarDocs/validarHabitese.php" title="Verificação de Autenticidade do Termo de Habite-se" target="_blank">Autenticidade do Termo de Habite-se</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Verifique a autenticidade do Termo de Habite-se diretamente pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -433,7 +433,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/documentos/" title="Visualização de Documentos" target="_blank">Visualização de Documentos</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                  <p>Visualize documentos de forma prática pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -445,7 +445,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/lancamento-iss-fora-municipio/" title="Lançamento de ISSQN Fora do Município" target="_blank">ISSQN Fora do Município</a></h4>
-                  <p>Registre o Imposto Sobre Serviços (ISSQN) para serviços prestados fora do município diretamente pelo Portal do Contribuinte</p>
+                  <p>Registre o Imposto Sobre Serviços (ISSQN) para serviços prestados fora do município pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -457,7 +457,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/centros-atendimento/" title="Centros de Atendimento ao Cidadão – CAC’s" target="_blank">Centros de Atendimento ao Cidadão – CAC’s</a></h4>
-                  <p>Encontre informações sobre os Centros de Atendimento ao Cidadão (CAC’s), incluindo endereços, horários de atendimento e telefone para contato.</p>
+                  <p>Encontre informações sobre os Centros de Atendimento ao Cidadão (CAC’s), incluindo endereços, horários e telefone.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -469,7 +469,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="#" title="Processo de Reularização de Construção" target="_blank">Processo de Regularização de Construção</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Consulte o processo de regularização de construção disponível no Portal do Contribuinte.</p>
                 </div>
               </div> 
             </div><!-- End Portfolio Item -->
@@ -481,7 +481,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/requerimento-licenca-ambiental/novo/" title="Requerimento de Licença Ambiental" target="_blank">Requerimento de Licença Ambiental</a></h4>
-                  <p>Solicite a licença ambiental necessária para suas atividades diretamente pelo Portal do Contribuinte, preenchendo o formulário e enviando a documentação exigida.</p>
+                  <p>Solicite a licença ambiental necessária para suas atividades pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -493,7 +493,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-alvara-imediato/listar/" title="Solicitações de Alvará Imediato" target="_blank">Solicitações de Alvará Imediato</a></h4>
-                  <p>Solicite e obtenha seu alvará de funcionamento rapidamente pelo Portal do Contribuinte, com emissão imediata após o preenchimento do formulário e envio dos documentos necessários. </p>
+                  <p>Solicite seu alvará de funcionamento rapidamente pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -505,7 +505,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/requerimento-licenciamento-etr/" title="Requerimento de Licenciamento para Estação Transmissora de Radiocomunicação - ETR" target="_blank">Requerimento de Licenciamento para Estação Transmissora de Radiocomunicação - ETR</a></h4>
-                  <p>Solicite o licenciamento para sua Estação Transmissora de Radiocomunicação (ETR) diretamente pelo portal da prefeitura, preenchendo o formulário e enviando a documentação necessária.</p>
+                  <p>Solicite o licenciamento da ETR pelo portal da prefeitura, enviando o formulário e a documentação</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
